@@ -29,8 +29,8 @@ public class SetupMenu {
     private final int previousIcon = 27;
     Inventory inventory;
     Player player;
-    ArrayList<Integer> validSlots = new ArrayList<>(Arrays.asList(10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 22, 23,
-            24, 25, 28, 29, 30, 31, 32, 33, 34, 37, 38, 39, 40, 41, 42, 43, 46, 47, 48, 49, 50, 51, 52));
+    ArrayList<Integer> validSlots = new ArrayList<>(new ArrayList<>(List.of(10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 22, 23,
+            24, 25, 28, 29, 30, 31, 32, 33, 34, 37, 38, 39, 40, 41, 42, 43, 46, 47, 48, 49, 50, 51, 52)));
     HashMap<Integer, EMPackage> minidungeonHashMap = new HashMap<>();
     @Getter
     private int currentPage = 1;
