@@ -466,14 +466,14 @@ public class CustomBossesConfigFields extends CustomConfigFields {
     }
 
     protected List<String> majorBossDeathString(String slainLine) {
-        return Arrays.asList(
+        return new ArrayList<>(List.of(
                 "&e&l---------------------------------------------",
                 "&4" + slainLine,
                 "&c&l    1st Damager: $damager1name &cwith $damager1damage damage!",
                 "&6&l    2nd Damager: $damager2name &6with $damager2damage damage!",
                 "&e&l    3rd Damager: $damager3name &ewith $damager3damage damage!",
                 "&aSlayers: $players",
-                "&e&l---------------------------------------------");
+                "&e&l---------------------------------------------"));
     }
 
     public void saveFile() {
