@@ -5,7 +5,8 @@ import com.magmaguy.magmacore.util.ItemStackGenerator;
 import org.bukkit.Material;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class TheLivingDeadConfig extends CustomBossesConfigFields {
     public TheLivingDeadConfig() {
@@ -18,7 +19,7 @@ public class TheLivingDeadConfig extends CustomBossesConfigFields {
         setChestplate(ItemStackGenerator.generateItemStack(Material.CHAINMAIL_CHESTPLATE));
         setLeggings(ItemStackGenerator.generateItemStack(Material.CHAINMAIL_LEGGINGS));
         setBoots(ItemStackGenerator.generateItemStack(Material.CHAINMAIL_BOOTS));
-        setPowers(Arrays.asList("attack_fire.yml", "corpse.yml", "ground_pound.yml"));
+        setPowers(new ArrayList<>(List.of("attack_fire.yml", "corpse.yml", "ground_pound.yml")));
         setFollowDistance(100);
     }
 }
