@@ -5,13 +5,14 @@ import org.bukkit.Material;
 import org.bukkit.entity.EntityType;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class TotemZombie2Boss extends CustomBossesConfigFields {
     public TotemZombie2Boss() {
         super("totem_zombie_2", EntityType.ZOMBIE, true, "$eventBossLevel Totem Zombie", "dynamic");
         setMountedEntity("totem_zombie_3.yml");
-        setPowers(Arrays.asList("arrow_rain.yml", "attack_arrow.yml", "bonus_loot.yml"));
+        setPowers(new ArrayList<>(List.of("arrow_rain.yml", "attack_arrow.yml", "bonus_loot.yml")));
         setCullReinforcements(false);
         setFollowDistance(100);
         setHelmet(new ItemStack(Material.DIAMOND_HELMET));
