@@ -5,13 +5,14 @@ import org.bukkit.Material;
 import org.bukkit.entity.EntityType;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class TotemZombie5Boss extends CustomBossesConfigFields {
     public TotemZombie5Boss() {
         super("totem_zombie_5", EntityType.ZOMBIE, true, "$eventBossLevel Totem Zombie", "dynamic");
         setMountedEntity("totem_zombie_6.yml");
-        setPowers(Arrays.asList("attack_gravity.yml", "attack_blinding.yml", "bonus_loot.yml"));
+        setPowers(new ArrayList<>(List.of("attack_gravity.yml", "attack_blinding.yml", "bonus_loot.yml")));
         setCullReinforcements(false);
         setFollowDistance(100);
         setHelmet(new ItemStack(Material.LEATHER_HELMET));
