@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.custombosses.premade;
 import com.magmaguy.elitemobs.config.custombosses.CustomBossesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class WoodLeagueWave5Miniboss extends CustomBossesConfigFields {
@@ -13,7 +13,7 @@ public class WoodLeagueWave5Miniboss extends CustomBossesConfigFields {
                 true,
                 "$minibossLevel &cWeird Cow",
                 "5");
-        setPowers(Arrays.asList("attack_push.yml", "attack_gravity.yml"));
+        setPowers(new ArrayList<>(List.of("attack_push.yml", "attack_gravity.yml")));
         setOnDamagedMessages(List.of("Woof!"));
         setHealthMultiplier(3D);
         setDamageMultiplier(2D);
