@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.customitems.premade;
 import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class CheetahCharmConfig extends CustomItemsConfigFields {
@@ -12,9 +12,9 @@ public class CheetahCharmConfig extends CustomItemsConfigFields {
                 true,
                 Material.GOLDEN_BOOTS,
                 "&bCheetah Charm",
-                Arrays.asList("&aCheetahs can reach speeds of", "&a120 km/h... for about 60", "&aseconds. Make them count!"));
+                new ArrayList<>(List.of("&aCheetahs can reach speeds of", "&a120 km/h... for about 60", "&aseconds. Make them count!")));
         setEnchantments(List.of("VANISHING_CURSE,1"));
-        setPotionEffects(Arrays.asList("SPEED,2,self,continuous", "HUNGER,0,self,continuous"));
+        setPotionEffects(new ArrayList<>(List.of("SPEED,2,self,continuous", "HUNGER,0,self,continuous")));
         setDropWeight("1");
     }
 }
