@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.customitems.premade;
 import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class RabbitCharmConfig extends CustomItemsConfigFields {
@@ -12,7 +12,7 @@ public class RabbitCharmConfig extends CustomItemsConfigFields {
                 true,
                 Material.RABBIT_FOOT,
                 "&bRabbit Charm",
-                Arrays.asList("&aWith this charm, just about", "&aany destination is only a hop,", "&askip and a jump away!"));
+                new ArrayList<>(List.of("&aWith this charm, just about", "&aany destination is only a hop,", "&askip and a jump away!")));
         setEnchantments(List.of("VANISHING_CURSE,1"));
         setPotionEffects(List.of("JUMP,2,self,continuous"));
         setDropWeight("1");
