@@ -5,7 +5,6 @@ import com.magmaguy.elitemobs.items.customitems.CustomItem;
 import org.bukkit.Material;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class ScrapEliteSmallConfig extends CustomItemsConfigFields {
@@ -14,7 +13,7 @@ public class ScrapEliteSmallConfig extends CustomItemsConfigFields {
                 true,
                 Material.GREEN_DYE,
                 "&9Small Elite Scrap",
-                Arrays.asList("&fUsed to repair Elite items!", "&fRepairs a medium amount!"));
+                new ArrayList<>(List.of("&fUsed to repair Elite items!", "&fRepairs a medium amount!")));
         setItemType(CustomItem.ItemType.UNIQUE);
         setEnchantments(new ArrayList<>(List.of("repair,2")));
         setScalability(CustomItem.Scalability.FIXED);
