@@ -4,7 +4,7 @@ import com.magmaguy.elitemobs.config.dungeonpackager.DungeonPackagerConfigFields
 import com.magmaguy.elitemobs.utils.DiscordLinks;
 import org.bukkit.World;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
@@ -13,8 +13,8 @@ public class TheCaveSanctum extends DungeonPackagerConfigFields {
         super("the_cave_sanctum",
                 true,
                 "&2[lvl 010] &3The Cave Sanctum",
-                Arrays.asList("&fThe perfect starter instanced sanctum!",
-                        "&6Credits: MagmaGuy, Frostcone, 69OzCanOfBepis, Realm of Lotheridon"),
+                new ArrayList<>(List.of("&fThe perfect starter instanced sanctum!",
+                        "&6Credits: MagmaGuy, Frostcone, 69OzCanOfBepis, Realm of Lotheridon")),
                 DiscordLinks.freeMinidungeons,
                 DungeonSizeCategory.SANCTUM,
                 "em_id_the_cave",
