@@ -9,7 +9,7 @@ import lombok.Getter;
 import org.bukkit.Material;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class UnbinderMenuConfig extends MenusConfigFields {
@@ -58,8 +58,8 @@ public class UnbinderMenuConfig extends MenusConfigFields {
                 "infoButton",
                 ItemStackGenerator.generateSkullItemStack("magmaguy",
                         "&4&lEliteMobs &r&cby &4&lMagmaGuy",
-                        Arrays.asList("&8Support the plugins you enjoy!",
-                                "&aUse an &5Unbind Scroll &ato remove Soulbind from an item!"), MetadataHandler.signatureID),
+                        new ArrayList<>(List.of("&8Support the plugins you enjoy!",
+                                "&aUse an &5Unbind Scroll &ato remove Soulbind from an item!")), MetadataHandler.signatureID),
                 fileConfiguration);
         infoButton = ItemStackSerializer.deserialize("infoButton", fileConfiguration);
         infoSlot = ConfigurationEngine.setInt(fileConfiguration, "infoButtonSlot", 4);
