@@ -3,7 +3,8 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class ElitePolarBearConfig extends MobPropertiesConfigFields {
     public ElitePolarBearConfig() {
@@ -11,8 +12,8 @@ public class ElitePolarBearConfig extends MobPropertiesConfigFields {
                 EntityType.POLAR_BEAR,
                 true,
                 "&fLvl &2$level &fElite &fPolar Bear",
-                Arrays.asList("$player &cwas clawed to death by $entity&c!",
-                        "$player &cwas mauled to death by $entity&c!"),
+                new ArrayList<>(List.of("$player &cwas clawed to death by $entity&c!",
+                        "$player &cwas mauled to death by $entity&c!")),
                 9);
     }
 }
