@@ -3,7 +3,8 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class EliteSpiderConfig extends MobPropertiesConfigFields {
     public EliteSpiderConfig() {
@@ -11,8 +12,8 @@ public class EliteSpiderConfig extends MobPropertiesConfigFields {
                 EntityType.SPIDER,
                 true,
                 "&fLvl &2$level &fElite &7Spider",
-                Arrays.asList("$player &cbecame entangled in $entity's &cweb!",
-                        "$entity &chas devoured $player&c!"),
+                new ArrayList<>(List.of("$player &cbecame entangled in $entity's &cweb!",
+                        "$entity &chas devoured $player&c!")),
                 3);
     }
 }
