@@ -6,7 +6,7 @@ import com.magmaguy.elitemobs.powers.ZombieParents;
 import lombok.Getter;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class ZombieParentsConfig extends PowersConfigFields {
@@ -29,7 +29,7 @@ public class ZombieParentsConfig extends PowersConfigFields {
 
     @Override
     public void processAdditionalFields() {
-        deathMessage = ConfigurationEngine.setList(file, fileConfiguration, "deathMessage", Arrays.asList(
+        deathMessage = ConfigurationEngine.setList(file, fileConfiguration, "deathMessage", new ArrayList<>(List.of(
                 "You monster!",
                 "My baby!",
                 "What have you done!?",
@@ -39,9 +39,9 @@ public class ZombieParentsConfig extends PowersConfigFields {
                 "Eh, he was adopted",
                 "He's dead! Again!",
                 "He's deader than before!",
-                "You broke him!"), true);
+                "You broke him!")), true);
 
-        bossEntityDialog = ConfigurationEngine.setList(file, fileConfiguration, "bossEntityDialog", Arrays.asList(
+        bossEntityDialog = ConfigurationEngine.setList(file, fileConfiguration, "bossEntityDialog", new ArrayList<>(List.of(
                 "You're embarrassing me!",
                 "He's bullying me!",
                 "He's the one picking on me!",
@@ -50,9 +50,9 @@ public class ZombieParentsConfig extends PowersConfigFields {
                 "Stop following me around!",
                 "God this is so embarrassing!",
                 "He took my lunch money!",
-                "He's bullying me!"), true);
+                "He's bullying me!")), true);
 
-        zombieDad = ConfigurationEngine.setList(file, fileConfiguration, "zombieDad", Arrays.asList(
+        zombieDad = ConfigurationEngine.setList(file, fileConfiguration, "zombieDad", new ArrayList<>(List.of(
                 "Get away from my son!",
                 "Stand up for yourself son!",
                 "I'll deal with him!",
@@ -61,9 +61,9 @@ public class ZombieParentsConfig extends PowersConfigFields {
                 "I'll talk to your parents!",
                 "You go kiddo!",
                 "Show him who's boss kiddo!",
-                "Nice punch kiddo!"), true);
+                "Nice punch kiddo!")), true);
 
-        zombieMom = ConfigurationEngine.setList(file, fileConfiguration, "zombieMom", Arrays.asList(
+        zombieMom = ConfigurationEngine.setList(file, fileConfiguration, "zombieMom", new ArrayList<>(List.of(
                 "Hands off my child!",
                 "Are you hurt sweetie?",
                 "Did he hurt you sweetie?",
@@ -73,7 +73,7 @@ public class ZombieParentsConfig extends PowersConfigFields {
                 "Posture, sweetheart",
                 "Break it up!",
                 "Stop this!",
-                "Did you take out the garbage?"), true);
+                "Did you take out the garbage?")), true);
     }
 
 }
